@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Exception.cc,v 1.7 1999-11-23 15:00:05 gcosmo Exp $
+// $Id: G4Exception.cc,v 1.8 1999-11-29 10:17:46 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -20,6 +20,7 @@
 
 #include "G4ios.hh"
 #include <stdlib.h>
+#include "g4rw/cstring.h"
 
 void G4Exception(const char* s)
 {
@@ -32,17 +33,12 @@ void G4Exception(const char* s)
    abort();
 }
 
-#ifdef G4USE_STL
-#include "g4std/string"
 void G4Exception(G4std::string s)
 {
   G4Exception(s.c_str());
 }
-// Other typedefs
-#include "g4rw/cstring.h"
 
 void G4Exception(G4String s)
 {
   G4Exception(s.c_str());
 }
-#endif
